# all-projects-uv-python3.13

./: README.md  crud_csv_streamlit.py  crud_sqlite_streamlit.py  crud_sqlite_streamlit_2.py  meus_apps.py  pyproject.toml
.streamlit/: config.toml  secrets.toml
cnpj-novo/: cnpj.py  dv.py
data/: cadastro.csv
design-pattern/notificacao/: notificacao_sms.py
design-pattern/pagamento/: pagamento_factory.py
pages/: 🎰Mega-Sena.py  💰Meu Salário.py  📘Meus Cursos.py  📫Disparador de E-mail.py
